fix: Issue with hero sizing / favicon visibility

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ nav a:focus {
     background-repeat: no-repeat;
     background-position: center;
     padding: 0;
-    min-height: 35vh;
+    min-height: 45vh;
     display: flex;
     align-items: flex-end;
     position: relative;
@@ -433,7 +433,7 @@ footer {
         object-fit: cover;
         object-position: center 75%;
     }
-    
+
     .recent-posts {
         grid-column: span 3;
         align-self: flex-center; 
